prevent short pages from cutting off center menu dropdown

--- a/css/layout.less
+++ b/css/layout.less
@@ -3,6 +3,7 @@
 
 #app {
   overflow-x: hidden;
+  min-height: 100vh;
 }
 
 nav {
